Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -75,7 +75,7 @@ Node types define the VM size, number of VMs, custom endpoints, and other settin
 
 For any production deployment, [capacity planning](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity) is an important step. 
 
-IMPORTANT: If you are deploying just the MVC app container using mock-data or a remote SQL Server (like Azure SQL Database), you can select a D1_V2 Standard VM size which doesn't have much memory and it is cheap.
+**IMPORTANT (VM size/memory): **If you are deploying just the MVC app container using mock-data or a remote SQL Server (like Azure SQL Database), you can select a D1_V2 Standard VM size which doesn't have much memory and it is cheap.
  
 However, **if you will also want to deploy a SQL Server container** (the other SF app definition) as part of the same cluster, **then you will need a larger VM, with more memory (at least 7GB memory), like the D2_V2 or D3_V2 size**.
 
