Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -29,7 +29,7 @@ TBD
 - Have ready an Azure subscription
 - Have ready a Visual Studio Team Services account (Optional, if deploying from VSTS CD pipeline)
 - Visual Studio 2017 on dev machine (Recommended and needed for this specific walkthorugh)
-- Access to eShopModernizedMVC image at [Docker Hub](https://hub.docker.com/) (or any other Docker Registry like Azure Container Registry)
+- Access to [eShopModernizedMVC image](https://hub.docker.com/r/eshop/modernizedmvc/) at [Docker Hub](https://hub.docker.com/) (or any other Docker Registry like Azure Container Registry if you push/publish your own image)
 - Install [Docker CE for Windows](https://store.docker.com/editions/community/docker-ce-desktop-windows?tab=description) so that you can run containers on Windows 10 (dev machine).
 - Install Azure PowerShell
 - [Service Fabric Tools](https://blogs.msdn.microsoft.com/azureservicefabric/2017/03/17/visual-studio-2017-and-service-fabric-tools/) are part of the “Azure Development and Management” [workload](https://www.visualstudio.com/vs/visual-studio-workloads/) in Visual Studio 2017. Enable this workload as part of your Visual Studio installation.
