Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -36,7 +36,9 @@ TBD
 - Install Microsoft [Azure Service Fabric SDK](http://www.microsoft.com/web/handlers/webpi.ashx?command=getinstallerredirect&appid=MicrosoftAzure-ServiceFabric-CoreSDK) or higher through the Platform Installer
 - Install the [Continuous Delivery Tools extension](https://aka.ms/cd4vs) for Visual Studio 2017 (Optional. Needed for deployment from CD pipeline from VSTS)
 
-It is important that you must, in the first place, have tested either the eShopModernizedMVC or eShopModernizedWebForms container in a local Docker for Windows environment so it is now ready to be built and packaged in a Service Fabric application.
+If you choose to deploy your own eShopModernizedMVC or eShopModernizedWebForms custom Docker images, it is important that you must, in the first place, have tested either the eShopModernizedMVC or eShopModernizedWebForms container in a local Docker for Windows environment so it is now ready to be built and packaged in a Service Fabric application.
+
+If you choose to deploy our ready-to-deploy eShopModernizedMVC or eShopModernizedWebForms custom Docker images, you just need to follow the procedure related to Azure Service Fabric, below.
 
 ## Creating the Service Fabric cluster in Azure
 
