Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -256,15 +256,14 @@ Below you can see how Service Fabric Explorer shows the eShopModernizedMVC appli
 Finally, open a browser and navigate to `http://eshopmodernizedcluster.westus.cloudapp.azure.com:5114`. 
 You should see the eShopModernizedMVC web app in the browser.
 
-
-****************************************************************************************************************
-************** TBD - MVC app screenshot                                                 ************************
-****************************************************************************************************************
-
+![image](https://user-images.githubusercontent.com/1712635/30514317-2f4b90cc-9ac7-11e7-8ebc-d58b52823528.png)
 
 ### (OPTIONAL) Adding a SQL Server Windows Container to the applications
 
 If you don't want to use the "mock-data" but to access to a real SQL Server deployed as a container, then you'd need to add a similar SF service to the project by following a similar procedure.
+
+Or you can just deploy the Service Fabric app metadata-manifest project already available at the repo, in the same way you deployed the MVC container:
+https://github.com/dotnet-architecture/eShopModernizing/tree/master/ServiceFabric/eShopModernizedSQL_ServiceFabricApp
 
 See image below in VS and explore the XML code in the repo to know how easy is to deploy a SQL Server container into Service Fabric.
 
