Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -313,3 +313,5 @@ Additional resources
     [https://github.com/Azure-Samples/service-fabric-dotnet-containers](https://github.com/Azure-Samples/service-fabric-dotnet-containers)
 - Reverse proxy in Azure Service Fabric
     [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-reverseproxy)
+- DNS service in Azure Service Fabric
+[https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-dnsservice](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-dnsservice)
