Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -38,7 +38,7 @@ TBD
 
 If you choose to deploy your own eShopModernizedMVC or eShopModernizedWebForms custom Docker images, it is important that you must, in the first place, have tested either the eShopModernizedMVC or eShopModernizedWebForms container in a local Docker for Windows environment so it is now ready to be built and packaged in a Service Fabric application.
 
-If you choose to deploy our ready-to-deploy eShopModernizedMVC or eShopModernizedWebForms custom Docker images, you just need to follow the procedure related to Azure Service Fabric, below.
+If you choose to deploy our ready-to-deploy our [eShopModernizedMVC](https://hub.docker.com/r/eshop/modernizedmvc/) or [eShopModernizedWebForms](https://hub.docker.com/r/eshop/modernizedwebforms/) custom Docker images, you just need to follow the procedure related to Azure Service Fabric, below.
 
 ## Creating the Service Fabric cluster in Azure
 
