Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -81,9 +81,10 @@ For any production deployment, [capacity planning](https://docs.microsoft.com/en
  
 However, **if you will also want to deploy a SQL Server container** (the other SF app definition) as part of the same cluster, **then you will need a larger VM, with more memory (at least 7GB memory), like the D2_V2 or D3_V2 size**.
 
-Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs.
+Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs if you want to see how the containers are distributed across the cluster.
+Just for testing, you could also create a single VM/instance which cannot have high availability but will be cheaper and might be enough for quick tests. 
 
-Custom endpoints open up ports in the Azure load balancer so that you can connect with applications running on the cluster. It is IMPORTANT that you enter at least the ports to be used by the eShopModernized applications.
+**Custom endpoints** open up **ports in the Azure load balancer** so that you can connect with applications running on the cluster. It is IMPORTANT that you enter at least the ports to be used by the eShopModernized applications.
 
 The list below are ports used by eShopModernizing apps and also other ports used by eShopOnContainers, if you want to deploy multiple applications in the same SF cluster:
 
