Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -238,13 +238,16 @@ However, you could configure container registry authentication by adding `Reposi
 
 To publish your SF application (which was defined simply by the xml manifest files pointing to container images available at a Docker Registry), just right-click on the Service Fabric project (i.e. **eShopModernizedMVC_ServiceFabricApp**) in  **Solution Explorer** in Visual Studio and select **Publish**.
 
-In **Connection Endpoint**, select/enter the management endpoint for the cluster. For example, `eshopmodernizedcluster.westus.cloudapp.azure.com:19000`. You can find the client connection endpoint in the Overview blade for your cluster in the Azure portal.
+![image](https://user-images.githubusercontent.com/1712635/30515271-53ba04b8-9ad9-11e7-9f33-a52629adbc5d.png)
 
-****************************************************************************************************************
-************** TBD - VISUAL STUDIO SCREENSHOT of the PUBLISH SERVICE APPLICATION dialog ************************
-****************************************************************************************************************
+Then, in **Connection Endpoint**, select/enter the management endpoint for the cluster. For example, `eshopmodernizedcluster.westus.cloudapp.azure.com:19000`. You can find the client connection endpoint in the Overview blade for your cluster in the Azure portal.
+
+![image](https://user-images.githubusercontent.com/1712635/30515279-960b96e2-9ad9-11e7-9e80-89f0b9e082d2.png)
 
 Click **Publish**.
+
+IMPORTANT NOTE: The first time you deploy a container type into SF plus the eShopModernized app it might take sometime (just a few minutes) until you can run the app properly from the browser. 
+First, the nodes need to pull the Windows and ASP.NET images. Second, the application will populate sample data into the database, the first time, which also takes some time.
 
 While publishing, you can see how the application is being deployed by using Service Fabric Explorer. As mentioned before, [Service Fabric Explorer](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-visualizing-your-cluster) is a web-based tool for inspecting and managing applications and nodes in a Service Fabric cluster. Open a browser and navigate to [http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/](http://eshopmodernizedcluster.westus.cloudapp.azure.com:19080/Explorer/) and follow the application deployment. 
 
