Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -260,7 +260,9 @@ Below you can see how Service Fabric Explorer shows the eShopModernizedMVC appli
 Finally, open a browser and navigate to `http://eshopmodernizedcluster.westus.cloudapp.azure.com:5114`. 
 You should see the eShopModernizedMVC web app in the browser.
 
-![image](https://user-images.githubusercontent.com/1712635/30514317-2f4b90cc-9ac7-11e7-8ebc-d58b52823528.png)
+![image](https://user-images.githubusercontent.com/1712635/30515328-3d880c48-9ada-11e7-85db-aaf9d43eba34.png)
+
+Note that if you connect to SQL Server and change data by using the SQL Server manager, that should have changed the data in the application if mockdata=False in the env variables.
 
 ### (OPTIONAL) Adding a SQL Server Windows Container to the applications
 
