--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -77,9 +77,9 @@ Node types define the VM size, number of VMs, custom endpoints, and other settin
 
 For any production deployment, [capacity planning](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity) is an important step. 
 
-**IMPORTANT** (VM size/memory): If you are deploying just the MVC app container using mock-data or a remote SQL Server (like Azure SQL Database), you can select a D1_V2 Standard VM size which doesn't have much memory and it is cheap.
+**NOTE** (VM size/memory): If you are deploying just the MVC app container using mock-data and the SQL Server container the D1_V2 Standard VM might be enough (as tested by us). But if deploying many more large containers like the SQL Container, you might need more memory in the VM size like the D2_V2 or D3_V2 size.
+But, initially, the D1_V2 Standard VM shuld be enough.
  ![image](https://user-images.githubusercontent.com/1712635/30514707-3c54c786-9acf-11e7-824d-e6c10139dece.png)
-However, **if you will also want to deploy a SQL Server container** (the other SF app definition) as part of the same cluster, **then you will need a larger VM, with more memory (at least 7GB memory), like the D2_V2 or D3_V2 size**.
 
 Select "Silver" for the [reliability tier](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-capacity#the-reliability-characteristics-of-the-cluster) and an initial virtual machine scale set **capacity of 5** VMs if you want to see how the containers are distributed across the cluster.
 Just for testing, you could also create a single VM/instance which cannot have high availability but will be cheaper and might be enough for quick tests. 
