Updated 05. How to deploy your Windows Containers based apps into Azure Service Fabric (Including CI CD) (markdown)

--- a/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
+++ b/05.-How-to-deploy-your-Windows-Containers-based-apps-into-Azure-Service-Fabric-(Including-CI-CD).md
@@ -313,6 +313,8 @@ Additional resources
     [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-cluster-creation-via-arm)
 - Create a secure cluster on Azure using PowerShell
     [https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps ](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-tutorial-create-cluster-azure-ps )
+- Create secure Service Fabric cluster quickly with no explicit ARM templates
+    [http://blog.randomdust.com/2017/05/new-service-fabric-powershell-cmdlets/](http://blog.randomdust.com/2017/05/new-service-fabric-powershell-cmdlets/)
 - ApplicationInsights SDK for ServiceFabric projects
     [https://github.com/Microsoft/ApplicationInsights-ServiceFabric](https://github.com/Microsoft/ApplicationInsights-ServiceFabric)
 - Service Fabric Container Samples (C# Web frontent and Nodejs backend)
