Updated 05.1 Quick procedure to create a Secure Service Fabric cluster in Azure using PowerShell (markdown)

--- a/05.1-Quick-procedure-to-create-a-Secure-Service-Fabric-cluster-in-Azure-using-PowerShell.md
+++ b/05.1-Quick-procedure-to-create-a-Secure-Service-Fabric-cluster-in-Azure-using-PowerShell.md
@@ -7,7 +7,7 @@ see: https://docs.microsoft.com/en-us/powershell/module/azurerm.servicefabric/ne
 
 1. Enable executions in PowerShell 
 
-    Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Force -Scope CurrentUser
+    `Set-ExecutionPolicy -ExecutionPolicy Unrestricted -Force -Scope CurrentUser`
 
 2. INSTALL Azure PowerShell SDK:
 
