--- a/05.1-Quick-procedure-to-create-a-Secure-Service-Fabric-cluster-in-Azure-using-PowerShell.md
+++ b/05.1-Quick-procedure-to-create-a-Secure-Service-Fabric-cluster-in-Azure-using-PowerShell.md
@@ -45,7 +45,11 @@ see: https://docs.microsoft.com/en-us/powershell/module/azurerm.servicefabric/ne
 
     `New-AzureRmServiceFabricCluster -ResourceGroupName “pro-eshop-sfwin-cluster” -Location “westus” -ClusterSize 5 -VmPassword $pwd -CertificateSubjectName “pro-eshop-sfwin-cluster.westus.cloudapp.azure.com” -CertificateOutputFolder “c:\MyServiceFabricCertificates\” -CertificatePassword $pwd -OS WindowsServer2016DatacenterwithContainers`  
 
+## Other alternatives
+
 If you want to have further flexibility, such as deploying into an existing VNET, other names and config, you'll need to create/customize your ARM templates for the cluster.
 
+## Next steps
+At this point, you have a secure cluster Next, [connect to your cluster](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-connect-to-secure-cluster) and learn [how to manage application secrets](https://docs.microsoft.com/en-us/azure/service-fabric/service-fabric-application-secret-management).
 
 
