Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -174,9 +174,10 @@ Copy the files ca.pem, 'cert.pem' and 'key.pem' from your user's docker folder o
 You can specify a remote Docker Server when using the Docker Client in two ways:
 
 A. Use the -H or --host command line parameter
+
 B. Set the DOCKER_HOST environment variable
 
-For example, to connect to a remote Docker Server at IP Address 13.91.40.155 on the default 23751 port, run the following commands.
+For example, using the method B to connect to a remote Docker Server at IP Address 13.91.40.155 on the default 23751 port, run the following commands.
 
     `PS C:\> docker --host tcp://13.91.44.143:2375 info 
     or
