Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -107,11 +107,17 @@ By default, the Docker Server will only listen on a Named Pipe connection, which
 Perform the following steps in the server (VM) you deployed in Azure:
 
 1. Edit C:\ProgramData\docker\config\daemon.json. If it does not exist, just create the text file.
-2. Add or modify the hosts setting and append tcp://0.0.0.0:2375, like in the following JSON snippet.
+2. Add or modify the hosts settings and append tcp://0.0.0.0:2375 (un-secured port) and tcp://0.0.0.0:2376 (secured port), like in the following JSON snippet.
+    
+    BOTH PORTS plus internal npipe
+    {
+       "hosts": ["tcp://0.0.0.0:2375","tcp://0.0.0.0:2376","npipe://"]
+    }
 
-    `{
+    ONLY UN-SECURED PORT plus internal npipe
+    {
     "hosts": ["tcp://0.0.0.0:2375","npipe://"]
-    }`
+    }
 
 3. Save the file and restart the Docker Service with the command “Restart-Service Docker” from the PowerShell in the server VM.
 
