Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -123,7 +123,8 @@ Perform the following steps in the server (VM) you deployed in Azure:
 
 3. Save the file and restart the Docker Service with the command “Restart-Service Docker” from the PowerShell in the server VM.
 
-This configuration will listen for all IP addresses on port 2375 (Default Docker port). However, for real production environments you could also set only specific IP addresses for security reasons.
+This configuration will listen for all IP addresses on the specified ports (2375 and/or 2376 ports). 
+However, for real production environments you could also set only specific client IP addresses, for security reasons.
 
 ##### Create NSG rules allowing inbound traffic
 A network security group (NSG) contains a list of security rules that allow or deny network traffic to resources connected to Azure Virtual Networks (VNet). You’ll need to create a rule to allow traffic for remote management of your Windows Docker Host.
