Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -151,6 +151,19 @@ Note that if you also open the 2375 port you’ll be opening a door to anyone, s
 
 If you want to connect securely from the client development machine, you will need to create the certs on the server using [dockertls](https://hub.docker.com/r/stefanscherer/dockertls-windows/). If you're creating the certs with an IP address, you may want to consider a static IP to avoid having to recreate certs when the IP address changes.
 
+In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
+
+    `{
+        "tlskey":  "C:\\ProgramData\\docker\\certs.d\\server-key.pem",
+        "tlscert":  "C:\\ProgramData\\docker\\certs.d\\server-cert.pem",
+        "tlscacert":  "C:\\ProgramData\\docker\\certs.d\\ca.pem",
+        "hosts":  [
+                      "tcp://0.0.0.0:2376",
+                      "npipe://"
+                  ],
+        "tlsverify":  true
+    }`
+
 Restart the docker service with the ”`Restart-Service Docker`” command from the command prompt.
 
 At this point, remote clients should be able to connect remotely to the Docker server if using the required certificates.
