Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -147,21 +147,23 @@ Note that if you also open the 2375 port you’ll be opening a door to anyone, s
 
 **IMPORTANT:** You will need to create a similar NSG rule for the HTTP ports that your application uses. In this case, the eShopModernizingMVC app uses the **5114 port**.
 
-#### Create the certificates in the server (Optional but recommended)
+#### Create the certificates in the server (Optional but recommended for secured production environments)
 
-If you want to connect securely from the client development machine, you will need to create the certs on the server using [dockertls](https://hub.docker.com/r/stefanscherer/dockertls-windows/). If you're creating the certs with an IP address, you may want to consider a static IP to avoid having to recreate certs when the IP address changes.
+If you want to connect securely from the client development machine, you will need to create the needed certificates files CA (Certificate Authority, Server-Cert and Server-private-key, client cert and client-private-key).
+ 
+If you're creating the certs with an IP address, you may want to consider a static IP, or even better, use a DNS name to avoid having to recreate certs when the IP address changes.
 
 In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
 
     `{
-        "tlskey":  "C:\\ProgramData\\docker\\certs.d\\server-key.pem",
-        "tlscert":  "C:\\ProgramData\\docker\\certs.d\\server-cert.pem",
-        "tlscacert":  "C:\\ProgramData\\docker\\certs.d\\ca.pem",
+        "tlsverify":  true,
         "hosts":  [
                       "tcp://0.0.0.0:2376",
                       "npipe://"
                   ],
-        "tlsverify":  true
+        "tlscert":  "C:\\ProgramData\\docker\\certs.d\\serverCert.cer",
+        "tlskey":  "C:\\ProgramData\\docker\\certs.d\\privateKey.cer",
+        "tlscacert":  "C:\\ProgramData\\docker\\certs.d\\rootCA.cer"
     }`
 
 Restart the docker service with the ”`Restart-Service Docker`” command from the command prompt.
