Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -107,15 +107,9 @@ By default, the Docker Server will only listen on a Named Pipe connection, which
 Perform the following steps in the server (VM) you deployed in Azure:
 
 1. Edit C:\ProgramData\docker\config\daemon.json. If it does not exist, just create the text file.
-2. Add or modify the hosts settings and append tcp://0.0.0.0:2375 (un-secured port) and tcp://0.0.0.0:2376 (secured port), like in the following JSON snippet.
+2. Add or modify the hosts settings and append tcp://0.0.0.0:2375 (un-secured port), like in the following JSON snippet.
     
-    BOTH PORTS plus internal npipe
-
-     `{
-       "hosts": ["tcp://0.0.0.0:2375","tcp://0.0.0.0:2376","npipe://"]
-     }`
-
-    ONLY UN-SECURED PORT plus internal npipe
+    ONLY UNSECURED PORT plus internal npipe
 
     `{
     "hosts": ["tcp://0.0.0.0:2375","npipe://"]
@@ -123,35 +117,17 @@ Perform the following steps in the server (VM) you deployed in Azure:
 
 3. Save the file and restart the Docker Service with the command “Restart-Service Docker” from the PowerShell in the server VM.
 
-This configuration will listen for all IP addresses on the specified ports (2375 and/or 2376 ports). 
+This configuration will listen for all IP addresses on the specified 2375 ports (Warning, this is unsecured). 
 However, for real production environments you could also set only specific client IP addresses, for security reasons.
-
-##### Create NSG rules allowing inbound traffic
-A network security group (NSG) contains a list of security rules that allow or deny network traffic to resources connected to Azure Virtual Networks (VNet). You’ll need to create a rule to allow traffic for remote management of your Windows Docker Host.
-Make port docker's TLS ports 2375 and 2376 available by creating an NSG rule allowing inbound traffic. Note that for secure connections you only need to allow 2376.
-The portal should show an NSG configuration for your VM like the following:
-
-![image](https://user-images.githubusercontent.com/1712635/30407430-06383b20-98ad-11e7-8c17-085b7411bfb2.png)
-
-#### Open the Docker port in the Windows Firewall at the Windows Server VM
-
-In addition, you need to open the port used by Docker in the Windows Firewall, either by manually creating a rule of by running this PowerShell command:
-
-    `PS C:\> netsh advfirewall firewall add rule name="Docker Engine Remote Management" dir=in action=allow protocol=TCP localport=2375-2376`
-
-Or alternatively, using with this other PowerShell command:
-
-    `PS C:\> New-NetFirewallRule -DisplayName 'Docker Engine Remote Management' -Profile @('Domain', 'Public', 'Private') -Direction Inbound -Action Allow -Protocol TCP -LocalPort 2375-2376`
-
-Note that if you also open the 2375 port you’ll be opening a door to anyone, so you might want to open just the secure port and use the certificates for a secure connection.
-
-**IMPORTANT:** You will need to create a similar NSG rule for the HTTP ports that your application uses. In this case, the eShopModernizingMVC app uses the **5114 port**.
 
 #### Create the certificates in the server (Optional but recommended for secured production environments)
 
 If you want to connect securely from the client development machine, you will need to create the needed certificates files CA (Certificate Authority, Server-Cert and Server-private-key, client cert and client-private-key).
  
-If you're creating the certs with an IP address, you may want to consider a static IP, or even better, use a DNS name to avoid having to recreate certs when the IP address changes.
+If you're creating the certs with an IP address, you may want to consider an static IP for you VM, or even better, use a DNS name to avoid having to recreate certs when the IP address changes.
+
+Generate the certificates, keys and CA with this script:
+(TBC)
 
 In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
 
@@ -181,6 +157,27 @@ https://artisticcheese.wordpress.com/2017/06/10/using-pure-powershell-to-generat
 https://docs.microsoft.com/en-us/virtualization/windowscontainers/deploy-containers/deploy-containers-on-server
 - Considerations for running Docker for Windows Server 2016 with Hyper-V VMs
 https://blog.docker.com/2016/10/considerations-running-docker-windows-server-2016-hyper-v-vms/
+
+##### Create NSG rules allowing inbound traffic
+A network security group (NSG) contains a list of security rules that allow or deny network traffic to resources connected to Azure Virtual Networks (VNet). You’ll need to create a rule to allow traffic for remote management of your Windows Docker Host.
+Make port docker's TLS ports 2375 and 2376 available by creating an NSG rule allowing inbound traffic. Note that for secure connections you only need to allow 2376.
+The portal should show an NSG configuration for your VM like the following:
+
+![image](https://user-images.githubusercontent.com/1712635/30407430-06383b20-98ad-11e7-8c17-085b7411bfb2.png)
+
+#### Open the Docker port in the Windows Firewall at the Windows Server VM
+
+In addition, you need to open the port used by Docker in the Windows Firewall, either by manually creating a rule of by running this PowerShell command:
+
+    `PS C:\> netsh advfirewall firewall add rule name="Docker Engine Remote Management" dir=in action=allow protocol=TCP localport=2375-2376`
+
+Or alternatively, using with this other PowerShell command:
+
+    `PS C:\> New-NetFirewallRule -DisplayName 'Docker Engine Remote Management' -Profile @('Domain', 'Public', 'Private') -Direction Inbound -Action Allow -Protocol TCP -LocalPort 2375-2376`
+
+Note that if you also open the 2375 port you’ll be opening a door to anyone, so you might want to open just the secure port and use the certificates for a secure connection.
+
+**IMPORTANT:** You will need to create a similar NSG rule for the HTTP ports that your application uses. In this case, the eShopModernizingMVC app uses the **5114 port**.
 
 #### Remotely connecting and deploying containers into the Azure VM from a development machine
 
