Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -127,7 +127,14 @@ If you want to connect securely from the client development machine, you will ne
 If you're creating the certs with an IP address, you may want to consider an static IP for you VM, or even better, use a DNS name to avoid having to recreate certs when the IP address changes.
 
 Generate the certificates, keys and CA with this script:
-(TBC)
+
+In the Docker host VM (Windows Server 2016) create the following folder:
+
+    `mkdir c:\DockerCerts`
+
+Then, copy the following PowerShell Script into it and run it, like the following:
+
+
 
 In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
 
