Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -135,6 +135,15 @@ In the Docker host VM (Windows Server 2016) create the following folder:
 Then, copy the following PowerShell Script into it and run it, like the following:
 
 
+Generate the certificate files:
+![image](https://user-images.githubusercontent.com/1712635/30525511-d98ee354-9bbc-11e7-9989-1645d4110a90.png)
+
+Copy the server certificates plus the rooCA certificate into the folder **C:\ProgramData\docker\certs.d**
+
+![image](https://user-images.githubusercontent.com/1712635/30525537-3970929a-9bbd-11e7-9710-4ec01042553a.png)
+
+Copy the client certificates plus the rooCA certificate into the user folder **C:\Users\YOUR-USER\.docker** either at the server for testing and also at the client docker machine to connect from:
+
 
 In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
 
