Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -142,10 +142,11 @@ Copy the server certificates plus the rooCA certificate into the folder **C:\Pro
 
 ![image](https://user-images.githubusercontent.com/1712635/30525537-3970929a-9bbd-11e7-9710-4ec01042553a.png)
 
-Copy the client certificates plus the rooCA certificate into the user folder **C:\Users\YOUR-USER\.docker** either at the server for testing and also at the client docker machine to connect from:
+Copy the client certificates plus the rooCA certificate into the user folder **C:\Users\YOUR-USER\.docker** either at the server for testing and also at the client docker machine to connect from, as in the image:
 
+![image](https://user-images.githubusercontent.com/1712635/30525564-d6684c82-9bbd-11e7-8513-ae0803529fe5.png)
 
-In the secured environment, you should have a C:\ProgramData\docker\config\daemon.json in the server like the following:
+In the Docker host server, you should update and have a C:\ProgramData\docker\config\daemon.json in the server like the following:
 
     `{
         "tlsverify":  true,
@@ -158,17 +159,24 @@ In the secured environment, you should have a C:\ProgramData\docker\config\daemo
         "tlscacert":  "C:\\ProgramData\\docker\\certs.d\\rootCA.cer"
     }`
 
-Restart the docker service with the ”`Restart-Service Docker`” command from the command prompt.
+Now, restart the docker service with the ”`Restart-Service Docker`” command from the command prompt.
 
 At this point, remote clients should be able to connect remotely to the Docker server if using the required certificates.
 
-For more information on configuring the Docker Server on Windows check this [documentaion on Windows Containers](https://docs.microsoft.com/en-us/virtualization/windowscontainers/manage-docker/configure-docker-daemon).
+Test it out with the following Docker command, either from the server console and also from any remote docker machine from where you want to connect.
+This command should list the images at the Docker host, connecting securely based on the certificates.
+
+    `docker --tlsverify --tlscacert=$env:USERPROFILE\.docker\rootca.cer --tlscert=$env:USERPROFILE\.docker\clientPublicKey.cer --tlskey=$env:USERPROFILE\.docker\clientPrivateKey.cer -H=tcp://your-docker-host-name-server-vm.westus.cloudapp.azure.com:2376 images`
+
+For more information on configuring the Docker Server on Windows check this blog post:
+
+- Generating Certificates without using openSSL in plain PowerShell
+https://artisticcheese.wordpress.com/2017/06/10/using-pure-powershell-to-generate-tls-certificates-for-docker-daemon-running-on-windows/
 
 Additional resources 
 - Configuring Docker Engine on Windows Server 2016
 https://docs.microsoft.com/en-us/virtualization/windowscontainers/manage-docker/configure-docker-daemon
-- Generating Certificates without using openSSL in plain PowerShell
-https://artisticcheese.wordpress.com/2017/06/10/using-pure-powershell-to-generate-tls-certificates-for-docker-daemon-running-on-windows/
+
 - Container Host Deployment - Windows Server
 https://docs.microsoft.com/en-us/virtualization/windowscontainers/deploy-containers/deploy-containers-on-server
 - Considerations for running Docker for Windows Server 2016 with Hyper-V VMs
