Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -211,8 +211,11 @@ By using this method, you will connect to the Docker host (Windows Containers VM
 
 ##### Copy the client certs into your dev machine for a secure connection (Optional but recommended)
 
-If you want to connect securely to your VM in Azure, you need to your PC or dev machine.
-Copy the files ca.pem, 'cert.pem' and 'key.pem' from your user's docker folder on your VM where you generated the certs, e.g. c:\users\cesardl\.docker to you local machine. For example, you can ctrl-c, ctrl-v the files from an RDP session.
+If you want to connect securely to your VM in Azure, as mentioned before, you need to copy the client certificates plus the rootCA certificate into the user folder **C:\Users\YOUR-USER\.docker** at the client docker machine to connect from, as in the screenshot (previously shown, too, but in this case you'll do it in a remote client PC):
+
+![image](https://user-images.githubusercontent.com/1712635/30525564-d6684c82-9bbd-11e7-8513-ae0803529fe5.png)
+
+e.g. c:\users\YOUR-USER\.docker in your you local machine. For example, you can ctrl-c, ctrl-v the files from an RDP session in the server.
 
 ##### Setting up the Docker Client for remote connections
 
