Updated 03. How to deploy your Windows Containers based app into Azure VMs (Including CI CD) (markdown)

--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -219,6 +219,8 @@ e.g. c:\users\YOUR-USER\.docker in your you local machine. For example, you can 
 
 ##### Setting up the Docker Client for remote connections
 
+###### UNSECURED SCENARIO (Not using Certificates)
+
 You can specify a remote Docker Server when using the Docker Client in two ways:
 
 A. Use the -H or --host command line parameter
@@ -242,6 +244,13 @@ If your VM is set up with a DNS name in Azure, you could also run the same comma
      PS C:\> docker info
     `
 At this point, you could run any “docker-compose” or “docker run” command from your development machine and those commands will be executed against the remote Azure VM.
+
+##### SECURED SCENARIO (Using the certificates from the client)
+
+In this case, you can specify the certificates when connecting, like in the following example where you are obtaining the remote docker host "info", or you could do a docker-compose up, etc.
+
+PS C:\> docker --tlsverify --tlscacert=$env:USERPROFILE\.docker\rootca.cer --tlscert=$env:USERPROFILE\.docker\clientPublicKey.cer --tlskey=$env:USERPROFILE\.docker\clientPrivateKey.cer -H=tcp://windockerhost.westus.clo
+udapp.azure.com:2376 info
 
 ##### Publish the application .NET bits into a folder
 
