--- a/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
+++ b/03.-How-to-deploy-your-Windows-Containers-based-app-into-Azure-VMs-(Including-CI-CD).md
@@ -270,6 +270,13 @@ Then, build the custom Docker image and run the application container into the r
 
     `\> Docker-compose up`
 
+**SECURED OPTION:**
+In case you are using certificates for the secured communication from a client machine, you can run commands like the following:
+
+    `cd YOUR_PATH\eShopModernizing\VM\eShopModernizedMVC`
+
+    `docker-compose -H tcp://yourserver.westus.cloudapp.azure.com:2376 --tlscacert=$env:USERPROFILE\.docker\rootca.cer --tlscert=$env:USERPROFILE\.docker\clientPublicKey.cer --tlskey=$env:USERPROFILE\.docker\clientPrivateKey.cer -f .\docker-compose.nobuild.yml -f .\docker-compose.override.yml up`
+
 You will see a similar output to the following image.
 
 ![image](https://user-images.githubusercontent.com/1712635/30407784-3fc413ee-98af-11e7-84e9-4a76b7cf731d.png)
